# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import workersRouter from "./workers";
+import reviewsRouter from "./reviews";
+import categoriesRouter from "./categories";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(workersRouter);
+router.use(reviewsRouter);
+router.use(categoriesRouter);
+router.use(statsRouter);
 
 export default router;
